--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Test site</title>
 </head>
 <body>
-    <div class="main-header">Hallo</div>
+    <div class="main-header">Poepje</div>
 </body>
 </html>
