--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test site</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="main-header">Poepje</div>
+    <div class="main-header">Hallo</div>
 </body>
 </html>
