--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test site</title>
-    <link rel="stylesheet" href="index.css">
+  <title>Permanente tekstweergave</title>
+  <style>
+    /* Voeg hier je gewenste opmaak toe voor het tekstvak en de weergavecontainer */
+  </style>
 </head>
 <body>
-    <div class="main-header">Hallo</div>
+  <form id="inputForm">
+    <label for="inputText">Typ hier uw tekst:</label>
+    <input type="text" id="inputText" />
+    <button type="submit">Verzenden</button>
+  </form>
+  <div id="resultContainer"></div>
+
+<script>
+  const form = document.getElementById('inputForm');
+  const input = document.getElementById('inputText');
+  const resultContainer = document.getElementById('resultContainer');
+
+  // Wanneer het formulier wordt verzonden
+  form.addEventListener('submit', function (event) {
+    event.preventDefault(); // Voorkom het standaardgedrag van het formulier
+
+    const inputText = input.value.trim();
+
+    if (inputText !== '') {
+      // Opslaan in localStorage
+      localStorage.setItem('savedText', inputText);
+
+      // Toon de ingevulde tekst in de resultaatcontainer
+      resultContainer.textContent = inputText;
+    }
+  });
+
+  // Laad de opgeslagen tekst en toon deze bij het laden van de pagina
+  document.addEventListener('DOMContentLoaded', function () {
+    const savedText = localStorage.getItem('savedText');
+
+    if (savedText) {
+      resultContainer.textContent = savedText;
+    }
+  });
+</script>
 </body>
 </html>
